feat(benchmark): integrate current Atlas PRs with external cost tracking